# Cerulean-Companion

./: .gitignore  LICENSE.md  README.md  build.spec  cerulean-companion.spec  setup.cfg  usbl_relay.spec
bluerov2_usbl/: cli.py  gui.py  mock_serial.py  nmea2_extension.py  serial_nmea_protocol.py  usbl_relay_cli.py  usbl_relay_controller.py  usbl_relay_gooy.py  usbl_relay_gui.py
bluerov2_usbl/web/: app.js  index.html  main.html  main.js  style.css
docs/: README.md  index.md
docs/_layouts/: default.html
docs/images/: temp
testdata/: raw_gps_data.txt  raw_rth_data.txt
