[metadata]
name = Cerulean-Companion
version = 0.2.0
summary = A companion app for Cerulean Sonar devices
author = Nick Nothom, Dan Rose
classifier =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License

[options.package_data]
usbl_images = resources/gooey_image_dir/**

[options.entry_points]
console_scripts =
    cerulean-companion = bluerov2_usbl.usbl_relay_cli:main

[options]
zip_safe = false
packages = find:
python_requires = >= 3.6
install_requires =
    pyserial
    pynmea2 @ git+https://github.com/CeruleanSonar/pynmea2.git
    gooey @ git+https://github.com/chriskiehl/Gooey.git@refs/pull/599/head

